[package]
name = "nethuns_rs"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "A unified API for fast and portable network programming in Rust"
readme = "README.md"
repository = "https://github.com/leonardogiovannoni/nethuns-rs"
keywords = ["network", "packet", "pcap", "af_xdp", "netmap"]
categories = ["network-programming", "os"]

[features]
default = []
# Linux-only backends
af_xdp = ["dep:aya", "dep:libbpf-sys", "dep:libxdp-sys"]
dpdk = ["dep:dpdk-sys"]
netmap = ["dep:netmap-rs"]
# Enable all Linux-specific features
linux-all = ["af_xdp", "dpdk", "netmap"]

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.31", features = ["derive"] }
ctrlc = "3.4.5"
etherparse = "0.17.0"
eui48 = "1.1.0"
libc = "0.2.169"
nix = "0.29.0"
num_cpus = "1.16.0"
mpsc = { path = "mpsc" }
ringbuf = "0.4.7"
rand = "0.9.0"
procspawn = "1.0.1"
arrayvec = "0.7.6"
thiserror = "2.0.12"
triomphe = "0.1.14"
flume = "0.11.1"
pcap = "2.3.0"

# Linux-only dependencies (enabled via features)
netmap-rs = { path = "netmap_rs", optional = true }
libxdp-sys = { path = "libxdp-sys", optional = true }
dpdk-sys = { path = "dpdk-sys", optional = true }
libbpf-sys = { version = "1.5.0", optional = true }
aya = { version = "0.13.1", optional = true }

[profile.dev]
panic = "abort"

[profile.release]
lto = "fat"
debug = true
panic = "abort"
debug-assertions = false



[[example]]
name = "meter"

[[example]]
name = "meter2"

[[example]]
name = "forward"

[[example]]
name = "forward_mt"

[[example]]
name = "pkt-gen"
